# workshop-bazel-demo

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  candidate.ts  genId.ts  index.html  main.ts  package-lock.json  package.json  system.ts  ts_library.bzl  tsconfig.json
