load("@npm_bazel_typescript//:index.bzl", "ts_library", "ts_devserver")

ts_library(
    name = "gen_id",
    srcs = ["genId.ts"]
)

ts_library(
    name = "candidate",
    srcs = ["candidate.ts"],
    deps = [":gen_id"]
)

ts_library(
    name = "system",
    srcs = ["system.ts"],
    deps = [":candidate"]
)

ts_library(
    name = "main",
    srcs = ["main.ts"],
    deps = [
        ":candidate",
        ":system"
    ]
)

load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle")

rollup_bundle(
  name = "bundle",
  entry_point = "main.js",
  deps = [":main"],
)

ts_devserver(
    name = "devserver",
    deps = [":bundle"],
    port = 4200,
    serving_path = "/bundle.js",
    static_files = ["index.html"],
)